project(DEMO)

add_executable(demo_5 demo_5.cpp demo_5_point.cpp demo_5_circle.cpp)

add_executable(demo_1 demo_1.cpp)

add_executable(demo_2 demo_2.cpp)

add_executable(demo_3 demo_3.cpp)

add_executable(demo_4 demo_4.cpp)

add_executable(demo_6 demo_6.cpp)

add_executable(demo_8 demo_8.cpp)

add_executable(demo_9 demo_9.cpp)

add_executable(demo_10 demo_10.cpp demo_10_test.cpp demo_10_person)

add_executable(demo_11 demo_11.cpp)

add_executable(demo_12 demo_12.cpp)

add_executable(demo_13 demo_13.cpp)

add_executable(demo_14 demo_14.cpp)

add_executable(demo_15 demo_15.cpp)

add_executable(demo_16 demo_16.cpp)

add_executable(demo_17 demo_17.cpp)

add_executable(demo_18 demo_18.cpp demo_18_workmanager.cpp demo_18_employee.cpp demo_18_manager.cpp demo_18_boss.cpp)

add_executable(demo_19 demo_19.cpp)

add_executable(demo_20 demo_20.cpp)

add_executable(demo_21 demo_21.cpp)

add_executable(demo_23 demo_23.cpp)

add_executable(demo_24 demo_24.cpp)

add_executable(demo_25 demo_25.cpp)

add_executable(demo_26 demo_26.cpp)

add_executable(demo_27 demo_27.cpp)

add_executable(demo_28 demo_28.cpp)

add_executable(demo_29 demo_29.cpp)

add_executable(demo_30 demo_30.cpp)

add_executable(demo_31 demo_31.cpp)

add_executable(demo_32 demo_32.cpp)

add_executable(demo_33 demo_33.cpp)